# covid-19-collect

./: .gitignore  Cargo.toml  README.md
.github/: cron.yml
.github/workflows/: cron.yml
src/: errors.rs  main.rs  model.rs
