[package]
name = "covid-19"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
tokio-postgres = {version = "0.7.2", features = ["with-chrono-0_4", "with-time-0_2", "with-serde_json-1"]}
reqwest = { version = "0.11", features = ["json"] }
num_enum = "0.5.4"
chrono = "0.4"
serde_json = "1.0"